--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>ETH</title>
@@ -18,7 +18,12 @@
 			<ul>
 				<li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
 				<li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
-				<li><a href="https://github.com/lukaselmer/eth-java-and-csharp">Java and C# in depth</a></li>
+				<li>
+					Java and C# in depth 
+					<a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a> 
+					<a href="https://github.com/lukaselmer/VFSPrototype">Projet</a></li> 
+					<a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjetETH</a>
+				</li>
 				<li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
 			</ul>
         </div>
