--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 				<li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
 				<li>
 					Java and C# in depth 
-					<a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a> 
-					<a href="https://github.com/lukaselmer/VFSPrototype">Projet</a></li> 
-					<a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjetETH</a>
+					<ul>
+						<li><a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a></li>
+						<li><a href="https://github.com/lukaselmer/VFSPrototype">Projekt</a></li> 
+						<li><a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjetETH</a></li>
+					</ul>
 				</li>
 				<li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
 			</ul>
