--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 			</ul>
         </div>
         <div class="span4">
+			<h4>Course Pages HS13</h4>
+			<ul>
+				<li><a href="http://las.ethz.ch/courses/ml-f13/">Machine Learning</a></li>
+			</ul>
+        </div>
+        <div class="span4">
 			<h4>Course Pages FS13</h4>
 			<ul>
 				<li><a href="http://www.cadmo.ethz.ch/education/lectures/FS13/DA">Datenstrukturen und Algorithmen</a></li>
