--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<h4>Course Pages HS13</h4>
 			<ul>
 				<li><a href="http://las.ethz.ch/courses/ml-f13/">Machine Learning</a></li>
+				<li><a href="http://project.las.ethz.ch/login">Machine Learning Project</a></li>
 			</ul>
         </div>
         <div class="span4">
