--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="span4">
             <h4>Github Repos</h4>
 			<ul>
+			        <li><a href="https://github.com/ganzm/AdvancedSystemsLab2013">Advanced Systems Lab</a></li>
 				<li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
 				<li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
 				<li>
@@ -32,8 +33,9 @@
         <div class="span4">
 			<h4>Course Pages HS13</h4>
 			<ul>
-				<li><a href="http://las.ethz.ch/courses/ml-f13/">Machine Learning</a></li>
-				<li><a href="http://project.las.ethz.ch/login">Machine Learning Project</a></li>
+				<li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a></li>
+				<li><a href="http://graphics.ethz.ch/teaching/cg13/home.php">Computer Graphics</a></li>
+				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
 			</ul>
         </div>
         <div class="span4">
