--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<ul>
 				<li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a></li>
 				<li><a href="http://graphics.ethz.ch/teaching/cg13/home.php">Computer Graphics</a></li>
-				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
+				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> / <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
 			</ul>
         </div>
         <div class="span4">
