--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a></li>
 						<li><a href="https://github.com/lukaselmer/VFSPrototype">Projekt</a></li> 
-						<li><a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjetETH</a></li>
+						<li><a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjectETH</a></li>
 					</ul>
 				</li>
 				<li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
