--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
             <h4>Github Repos</h4>
 			<ul>
 			        <li><a href="https://github.com/ganzm/AdvancedSystemsLab2013">Advanced Systems Lab</a></li>
+				<li>
+					Computer Graphics 
+					<ul>
+						<li>
+							<a href="https://github.com/lukaselmer/ethz-bsplines">B-Splines</a> |
+							<a href="https://bsplines-eth.renuo.ch/">Demo</a>
+						</li>
+						<li>
+							<a href="https://github.com/lukaselmer/ethz-computer-graphics-brdf-2013">BRDF / WebGL</a> |
+							<a href="https://brdf-eth.renuo.ch/">Demo</a>
+						</li>
+						<li>
+							<a href="https://github.com/lukaselmer/ethz-raytracer">Raytracer</a> |
+							<a href="https://raytracer-eth.renuo.ch/">Demo</a>
+						</li>
+					</ul>
+				</li>
 				<li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
 				<li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
 				<li>
