--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 			</ul>
         </div>
         <div class="span4">
+			<h4>Course Pages FS14</h4>
+			<ul>
+				<li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
+				<li><a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Game Lab</a></li>
+				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> / <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
+			</ul>
+        </div>
+        <div class="span4">
 			<h4>Course Pages HS13</h4>
 			<ul>
 				<li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a></li>
