--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>ETH</title>
@@ -52,7 +52,11 @@
 			<ul>
 				<li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
 				<li><a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Game Lab</a></li>
-				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> / <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
+				<li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
+				<li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
+				<li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
+				<li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
+				<li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
 			</ul>
         </div>
         <div class="span4">
