--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 			<h4>Course Pages FS14</h4>
 			<ul>
 				<li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
-				<li><a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Game Lab</a></li>
+				<li>
+					Game Lab
+					<a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
+					<a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a>		
+				</li>
 				<li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
 				<li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
 				<li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
