--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 				<li>
 					Game Lab
 					<a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
-					<a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a>		
+					<a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
+					<a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
 				</li>
 				<li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
 				<li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
