--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8"/>
 </head>
 <body>
-
 <div class="container">
     <div class="masthead">
         <h3 class="muted">ETH</h3>
@@ -15,80 +14,81 @@
     <div class="row-fluid">
         <div class="span4">
             <h4>Github Repos</h4>
-			<ul>
-			        <li><a href="https://github.com/ganzm/AdvancedSystemsLab2013">Advanced Systems Lab</a></li>
-				<li>
-					Computer Graphics 
-					<ul>
-						<li>
-							<a href="https://github.com/lukaselmer/ethz-bsplines">B-Splines</a> |
-							<a href="https://bsplines-eth.renuo.ch/">Demo</a>
-						</li>
-						<li>
-							<a href="https://github.com/lukaselmer/ethz-computer-graphics-brdf-2013">BRDF / WebGL</a> |
-							<a href="https://brdf-eth.renuo.ch/">Demo</a>
-						</li>
-						<li>
-							<a href="https://github.com/lukaselmer/ethz-raytracer">Raytracer</a> |
-							<a href="https://raytracer-eth.renuo.ch/">Demo</a>
-						</li>
-					</ul>
-				</li>
-				<li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
-				<li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
-				<li>
-					Java and C# in depth 
-					<ul>
-						<li><a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a></li>
-						<li><a href="https://github.com/lukaselmer/VFSPrototype">Projekt</a></li> 
-						<li><a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjectETH</a></li>
-					</ul>
-				</li>
-				<li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
-			</ul>
+            <ul>
+                <li><a href="https://github.com/ganzm/AdvancedSystemsLab2013">Advanced Systems Lab</a></li>
+                <li>
+                    Computer Graphics
+                    <ul>
+                        <li>
+                            <a href="https://github.com/lukaselmer/ethz-bsplines">B-Splines</a> | <a href="https://bsplines-eth.renuo.ch/">Demo</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/lukaselmer/ethz-computer-graphics-brdf-2013">BRDF / WebGL</a> |
+                            <a href="https://brdf-eth.renuo.ch/">Demo</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/lukaselmer/ethz-raytracer">Raytracer</a> |
+                            <a href="https://raytracer-eth.renuo.ch/">Demo</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
+                <li><a href="https://github.com/lukaselmer/eth-data-structures-and-algorithms">Datenstrukturen und Algorithmen</a></li>
+                <li>
+                    Java and C# in depth
+                    <ul>
+                        <li><a href="https://github.com/lukaselmer/eth-java-and-csharp">Übungen</a></li>
+                        <li><a href="https://github.com/lukaselmer/VFSPrototype">Projekt</a></li>
+                        <li><a href="https://code.vis.ethz.ch/project/jcd_dumplings/">ProjectETH</a></li>
+                    </ul>
+                </li>
+                <li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
+            </ul>
         </div>
         <div class="span4">
-			<h4>Course Pages FS14</h4>
-			<ul>
-				<li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
-				<li>
-					Game Lab
-					<a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
-					<a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
-					<a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
-				</li>
-				<li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
-				<li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
-				<li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
-				<li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
-				<li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
-			</ul>
+            <h4>Course Pages FS14</h4>
+            <ul>
+                <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
+                <li>
+                    Game Lab <a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
+                    <a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
+                    <a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
+                </li>
+                <li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
+                <li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
+                <li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
+                <li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
+                <li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
+            </ul>
         </div>
         <div class="span4">
-			<h4>Course Pages HS13</h4>
-			<ul>
-				<li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a></li>
-				<li><a href="http://graphics.ethz.ch/teaching/cg13/home.php">Computer Graphics</a></li>
-				<li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> / <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
-			</ul>
+            <h4>Course Pages HS13</h4>
+            <ul>
+                <li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a>
+                </li>
+                <li><a href="http://graphics.ethz.ch/teaching/cg13/home.php">Computer Graphics</a></li>
+                <li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> /
+                    <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
+            </ul>
         </div>
         <div class="span4">
-			<h4>Course Pages FS13</h4>
-			<ul>
-				<li><a href="http://www.cadmo.ethz.ch/education/lectures/FS13/DA">Datenstrukturen und Algorithmen</a></li>
-				<li><a href="https://www.systems.ethz.ch/courses/spring2013/data_mod_db">Data modelling and databases</a></li>
-				<li><a href="http://www.infsec.ethz.ch/education/ss2013/index">Formal Methods and Functional Programming</a></li>
-				<li><a href="http://se.inf.ethz.ch/courses/2013a_spring/JavaCSharp/">Java and C# in depth</a></li>
-			</ul>
+            <h4>Course Pages FS13</h4>
+            <ul>
+                <li><a href="http://www.cadmo.ethz.ch/education/lectures/FS13/DA">Datenstrukturen und Algorithmen</a></li>
+                <li><a href="https://www.systems.ethz.ch/courses/spring2013/data_mod_db">Data modelling and databases</a></li>
+                <li><a href="http://www.infsec.ethz.ch/education/ss2013/index">Formal Methods and Functional Programming</a></li>
+                <li><a href="http://se.inf.ethz.ch/courses/2013a_spring/JavaCSharp/">Java and C# in depth</a></li>
+            </ul>
         </div>
         <div class="span4">
-			<h4>Course Pages HS12</h4>
-			<ul>
-				<li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
-				<li><a href="http://www.ita.inf.ethz.ch/theoInf12/">Theoretische Informatik</a></li>
-				<li><a href="http://www.math.ethz.ch/education/bachelor/lectures/hs2012/other/linalg_INFK/uebungen/">Lineare Algebra</a></li>
-				<li><a href="www.crypto.ethz.ch/teaching/lectures/DM12/">Diskrete Mathematik</a></li>
-			</ul>
+            <h4>Course Pages HS12</h4>
+            <ul>
+                <li><a href="https://github.com/lukaselmer/eth-wsk-zf">Wahrscheinlichkeit und Statistik</a></li>
+                <li><a href="http://www.ita.inf.ethz.ch/theoInf12/">Theoretische Informatik</a></li>
+                <li><a href="http://www.math.ethz.ch/education/bachelor/lectures/hs2012/other/linalg_INFK/uebungen/">Lineare Algebra</a>
+                </li>
+                <li><a href="www.crypto.ethz.ch/teaching/lectures/DM12/">Diskrete Mathematik</a></li>
+            </ul>
         </div>
     </div>
     <hr>
@@ -96,7 +96,6 @@
         <p>&copy; <a href="https://www.renuo.ch/">Renuo GmbH</a> 2013</p>
     </div>
 </div>
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 </body>
