--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
         <div class="span4">
             <h4>Course Pages FS14</h4>
             <ul>
-                <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="#">Project</a></li>
+                <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="https://github.com/lukaselmer/ethz-computational-intelligence-lab">Project (private)</a></li>
                 <li>
-                    Game Lab <a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
+                    Game Programming Lab <a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
                     <a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
                     <a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
                 </li>
-                <li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
-                <li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
-                <li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
+                <li><a href="https://github.com/lukaselmer/ethz-web-scale-data-mining-project">Research in Computer Science: WEB scale data mining and analytics</a></li>
                 <li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
                 <li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
+                <li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
+                <li><a href="http://www.crypto.ethz.ch/teaching/lectures/Crypto14/">Cryptography</a></li>
+                <li><a href="http://disco.ethz.ch/lectures/podc/">Principles of Distributed Computing</a></li>
             </ul>
         </div>
         <div class="span4">
