--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
                 <li>Machine Learning <a href="http://las.ethz.ch/courses/ml-f13/">Course</a> / <a href="http://project.las.ethz.ch/login">Project</a>
                 </li>
                 <li><a href="http://graphics.ethz.ch/teaching/cg13/home.php">Computer Graphics</a></li>
-                <li>Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> /
-                    <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a></li>
+                <li>
+                    Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> /
+                    <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a> /
+                    <a href="https://github.com/lukaselmer/ethz-asl-testmaster">Testmaster</a> /
+                    <a href="https://github.com/lukaselmer/ethz-asl-bigfiles">Bigfiles</a> /
+                    <a href="https://github.com/lukaselmer/ethz-asl-testmaster-data">Testmaster Data</a>
+                </li>
             </ul>
         </div>
         <div class="span4">
