--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
         <div class="span4">
             <h4>Course Pages FS14</h4>
             <ul>
-                <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> / <a href="https://github.com/lukaselmer/ethz-computational-intelligence-lab">Project (private)</a></li>
+                <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> /
+                    <a href="https://github.com/lukaselmer/ethz-computational-intelligence-lab">Project (private)</a></li>
                 <li>
                     Game Programming Lab <a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
                     <a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
                     <a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
                 </li>
-                <li><a href="https://github.com/lukaselmer/ethz-web-scale-data-mining-project">Research in Computer Science: WEB scale data mining and analytics</a></li>
+                <li><a href="https://github.com/lukaselmer/ethz-web-scale-data-mining-project">Research in Computer Science: WEB scale data
+                    mining and analytics</a></li>
                 <li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
                 <li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
                 <li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
@@ -71,6 +73,7 @@
                 <li>
                     Advanced Systems Lab <a href="http://www.systems.ethz.ch/node/431">Course</a> /
                     <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a> /
+                    <a href="https://github.com/ganzm/AdvancedSystemsLab2013">Project</a> /
                     <a href="https://github.com/lukaselmer/ethz-asl-testmaster">Testmaster</a> /
                     <a href="https://github.com/lukaselmer/ethz-asl-bigfiles">Bigfiles</a> /
                     <a href="https://github.com/lukaselmer/ethz-asl-testmaster-data">Testmaster Data</a>
