--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
             </ul>
         </div>
         <div class="span4">
+            <h4>Course Pages HS14</h4>
+            <ul>
+                <li>E-Business-Law
+                    <a href="http://www.lawecon.ethz.ch/education/e-business-recht/Vorlesungsunterlagen/E_Businessrecht_HS_14">Course</a>
+                </li>
+                <li><a href="http://www.da.inf.ethz.ch/lectures/bigdata/index.html">Big Data</a></li>
+                <li><a href="http://www.pm.inf.ethz.ch/education/courses/coop">Concepts of Object-Oriented Programming</a></li>
+                <li><a href="http://www.da.inf.ethz.ch/lectures/ir/index.html">Information Retrieval</a></li>
+                <li><a href="http://las.ethz.ch/courses/pai-f14/">Probabilistic Artificial Intelligence</a></li>
+                <li>
+                    <a href="http://www.inf.ethz.ch/content/dam/ethz/special-interest/infk/department/Education/Master-s-Tracks-and-Focus-Areas/Forms---Documents/Master-Studies-Documents/Merkblatt_MSc_Thesis_E.pdf">Master
+                        Thesis</a></li>
+            </ul>
+        </div>
+        <div class="span4">
             <h4>Course Pages FS14</h4>
             <ul>
                 <li>Computational Intelligence Lab (CIL) <a href="http://cil.inf.ethz.ch/">Course</a> /
