--- a/index.html
+++ b/index.html
@@ -19,17 +19,11 @@
                 <li>
                     Computer Graphics
                     <ul>
+                        <li><a href="https://github.com/lukaselmer/ethz-bsplines">B-Splines</a> | <a href="https://bsplines-eth.renuo.ch/">Demo</a></li>
                         <li>
-                            <a href="https://github.com/lukaselmer/ethz-bsplines">B-Splines</a> | <a href="https://bsplines-eth.renuo.ch/">Demo</a>
+                            <a href="https://github.com/lukaselmer/ethz-computer-graphics-brdf-2013">BRDF / WebGL</a> | <a href="https://brdf-eth.renuo.ch/">Demo</a>
                         </li>
-                        <li>
-                            <a href="https://github.com/lukaselmer/ethz-computer-graphics-brdf-2013">BRDF / WebGL</a> |
-                            <a href="https://brdf-eth.renuo.ch/">Demo</a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/lukaselmer/ethz-raytracer">Raytracer</a> |
-                            <a href="https://raytracer-eth.renuo.ch/">Demo</a>
-                        </li>
+                        <li><a href="https://github.com/lukaselmer/ethz-raytracer">Raytracer</a> | <a href="https://raytracer-eth.renuo.ch/">Demo</a></li>
                     </ul>
                 </li>
                 <li><a href="https://github.com/lukaselmer/ethz-db-project">Data modelling and databases</a></li>
@@ -48,8 +42,8 @@
         <div class="span4">
             <h4>Course Pages HS14</h4>
             <ul>
-                <li>E-Business-Law
-                    <a href="http://www.lawecon.ethz.ch/education/e-business-recht/Vorlesungsunterlagen/E_Businessrecht_HS_14">Course</a>
+                <li>
+                    <a href="http://www.lawecon.ethz.ch/education/e-business-recht/Vorlesungsunterlagen/E_Businessrecht_HS_14">E-Business-Law</a>
                 </li>
                 <li><a href="http://www.da.inf.ethz.ch/lectures/bigdata/index.html">Big Data</a></li>
                 <li><a href="http://www.pm.inf.ethz.ch/education/courses/coop">Concepts of Object-Oriented Programming</a></li>
@@ -67,11 +61,11 @@
                     <a href="https://github.com/lukaselmer/ethz-computational-intelligence-lab">Project (private)</a></li>
                 <li>
                     Game Programming Lab <a href="http://graphics.ethz.ch/teaching/gamelab14/home.php">Course</a> /
-                    <a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> /
-                    <a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project Structure</a>
+                    <a href="https://twiki.graphics.ethz.ch/GameClass/WebHome">Wiki</a> / <a href="https://twiki.graphics.ethz.ch/GameClass/ProjectStructure2014">Project
+                    Structure</a>
                 </li>
-                <li><a href="https://github.com/lukaselmer/ethz-web-scale-data-mining-project">Research in Computer Science: WEB scale data
-                    mining and analytics</a></li>
+                <li><a href="https://github.com/lukaselmer/ethz-web-scale-data-mining-project">Research in Computer Science: WEB scale data mining and analytics</a>
+                </li>
                 <li><a href="http://cqi.inf.usi.ch/eqi14.html">Einführung in die Quanteninformatik</a></li>
                 <li><a href="http://cqi.inf.usi.ch/qic14.html">Quantum Information and Cryptography</a></li>
                 <li><a href="http://www.globis.ethz.ch/education/webeng">Web Engineering</a></li>
@@ -90,8 +84,8 @@
                     <a href="https://svn.inf.ethz.ch/svn/systems/asl13/trunk/user21/">ETH SVN</a> /
                     <a href="https://github.com/ganzm/AdvancedSystemsLab2013">Project</a> /
                     <a href="https://github.com/lukaselmer/ethz-asl-testmaster">Testmaster</a> /
-                    <a href="https://github.com/lukaselmer/ethz-asl-bigfiles">Bigfiles</a> /
-                    <a href="https://github.com/lukaselmer/ethz-asl-testmaster-data">Testmaster Data</a>
+                    <a href="https://github.com/lukaselmer/ethz-asl-bigfiles">Bigfiles</a> / <a href="https://github.com/lukaselmer/ethz-asl-testmaster-data">Testmaster
+                    Data</a>
                 </li>
             </ul>
         </div>
