--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li>
                     <a href="http://www.lawecon.ethz.ch/education/e-business-recht/Vorlesungsunterlagen/E_Businessrecht_HS_14">E-Business-Law</a>
                 </li>
-                <li><a href="http://www.da.inf.ethz.ch/lectures/bigdata/index.html">Big Data</a></li>
+                <li><a href="http://www.da.inf.ethz.ch/lectures/bigdata/index.html">Big Data</a> <a href="https://bitbucket.org/lukaselmer/ethz-big-data">Repo</a></li>
                 <li><a href="http://www.pm.inf.ethz.ch/education/courses/coop">Concepts of Object-Oriented Programming</a></li>
                 <li><a href="http://www.da.inf.ethz.ch/lectures/ir/index.html">Information Retrieval</a></li>
                 <li><a href="http://las.ethz.ch/courses/pai-f14/">Probabilistic Artificial Intelligence</a></li>
